Provisional HTML added for site

--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
 <footer>
     <img src="images/Facebook .png">
     <img src="images/instagram.png">
-    <img src="Images/Linkedin.png"
+    <img src="Images/Linkedin.png">
 </footer>
 
 </body>
+</html>
 
 
