--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <!----section I -->
 <header>
     <img src= images/header.jpg>
-    <div>about</div> <div>work</div> <div>contact</div>
+<span>
+    about work contact
+    </span>
         <h1>Abraham Fox</h1>
 </header>
 
@@ -36,12 +38,13 @@
 
     <h3>Subtitle</h3>
     <p2>Descriptive Text</p2> 
+    <br> <br>
     <form>
-        <label for ="name">Name</label>
+        <label for ="name">Name</label><br>
         <input type="text" id="name"><br>
-        <label for ="email">email</label>
+        <label for ="email">Email</label><br>
         <input type="text" id="email"><br>
-        <label for ="Message">Message</label>
+        <label for ="Message">Message</label><br>
         <input type="text" id="Message"><br>
         <button id="send">Send</button>
         
