added Alt attrib + Provisional sizing for organisation

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<title>Abraham Fox</title>
 <!----section I -->
 <header>
-    <img src= images/header.jpg>
+    <img src= images/header.jpg alt="reflective skyscraper windows" width="500px" height="500px">
 <span>
-    about work contact
+    <h4>About Work Contact</h4>
     </span>
         <h1>Abraham Fox</h1>
 </header>
@@ -12,7 +13,8 @@
 <!--Section II-->
 <body>
     <h2>Dreams Under Construction</h2>
-    <img src= images/abraham-fox.jpg>
+    <img src= images/abraham-fox.jpg alt="Self Portrait of Apraham Fox" width="3000px" height="2000px">
+    <br>
     <p1>Lorem ipsum dolor sit amet, consectetur adipiscing e
         lit, sed do eiusmod tempor incididunt ut labore et 
         dolore magna aliqua. Ut enim ad minim veniam, 
@@ -27,12 +29,13 @@
 <!--Section III-->
 
     <h3>Giving Breathe to each brick</h3>
-    <img src= images/1.jpg>
-    <img src= images/2.jpg>
-    <img src= images/3.jpg>
-    <img src= images/4.jpg>
-    <img src= images/5.jpg>
-
+    <table> 
+    <img src= images/1.jpg alt="Black and white building" width="500px" height="500px">
+    <img src= images/2.jpg alt="colour curved building" width="500px" height="500px"> 
+    <img src= images/3.jpg alt="Black and white border building" width="500px" height="500px">> 
+    <img src= images/4.jpg alt="coloir white tower block" width="500px" height="500px">
+    <img src= images/5.jpg alt="black and white skyscraper perspecive" width="500px" height="500px">
+</table>
 
 <!--Section IV-->
 
@@ -49,10 +52,13 @@
         <button id="send">Send</button>
         
 </form>
+<br>
 <footer>
-    <img src="images/Facebook .png">
-    <img src="images/instagram.png">
-    <img src="Images/Linkedin.png">
+ <span>
+    <a href="#" target="_blank" class="fa fa-linkedin"></a>
+    <a href="#" target="_blank" class="fa fa-facebook"></a>
+    <a href="#" target="_blank" class="fa fa-instagram"></a>
+ </span>
 </footer>
 
 </body>
