--- a/index.html
+++ b/index.html
@@ -1,65 +1,79 @@
 <!doctype html>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>Abraham Fox</title>
-<!----section I -->
+    <html lang="eng">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+            <title>Abraham Fox</title>
+            </head>
+
+
 <header>
     <img src= images/header.jpg alt="reflective skyscraper windows" width="500px" height="500px">
-<span>
-    <h4>About Work Contact</h4>
-    </span>
-        <h1>Abraham Fox</h1>
+        <nav>
+            <h4>
+                <a href="#About">About</a>
+                <a href="#Work">Work</a>
+                <a href="#Contact">Contact</a>
+         </h4>
+        </nav>
+    <h1>Abraham Fox</h1>
 </header>
 
-<!--Section II-->
+
 <body>
+    <section id="About">
     <h2>Dreams Under Construction</h2>
-    <img src= images/abraham-fox.jpg alt="Self Portrait of Apraham Fox" width="3000px" height="2000px">
-    <br>
-    <p1>Lorem ipsum dolor sit amet, consectetur adipiscing e
-        lit, sed do eiusmod tempor incididunt ut labore et 
-        dolore magna aliqua. Ut enim ad minim veniam, 
-        quis nostrud exercitation ullamco laboris 
-        nisi ut aliquip ex ea commodo consequat. 
-        Duis aute irure dolor in reprehenderit in 
-        voluptate velit esse cillum dolore eu fugiat 
-        nulla pariatur. Excepteur sint occaecat 
-        cupidatat non proident, sunt in culpa qui 
-        officia deserunt mollit anim id est laborum.</p1>
+        <img src= images/abraham-fox.jpg alt="Self Portrait of Apraham Fox" width="3000px" height="2000px">
+            <br>
+            <p1>Lorem ipsum dolor sit amet, consectetur adipiscing e
+                lit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua. Ut enim ad minim veniam, 
+                quis nostrud exercitation ullamco laboris 
+                nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in 
+                voluptate velit esse cillum dolore eu fugiat 
+                nulla pariatur. Excepteur sint occaecat 
+                cupidatat non proident, sunt in culpa qui 
+                officia deserunt mollit anim id est laborum.</p1>
+                </section>
 
-<!--Section III-->
 
+<section id="Work">
     <h3>Giving Breathe to each brick</h3>
-    <table> 
-    <img src= images/1.jpg alt="Black and white building" width="500px" height="500px">
-    <img src= images/2.jpg alt="colour curved building" width="500px" height="500px"> 
-    <img src= images/3.jpg alt="Black and white border building" width="500px" height="500px">> 
-    <img src= images/4.jpg alt="coloir white tower block" width="500px" height="500px">
+        <table> 
+        <img src= images/1.jpg alt="Black and white building" width="500px" height="500px">
+            <img src= images/2.jpg alt="colour curved building" width="500px" height="500px"> 
+        <img src= images/3.jpg alt="Black and white border building" width="500px" height="500px">> 
+        <img src= images/4.jpg alt="coloir white tower block" width="500px" height="500px">
     <img src= images/5.jpg alt="black and white skyscraper perspecive" width="500px" height="500px">
 </table>
+</section>
 
-<!--Section IV-->
 
+<section id="Contact">
     <h3>Subtitle</h3>
     <p2>Descriptive Text</p2> 
     <br> <br>
     <form>
         <label for ="name">Name</label><br>
-        <input type="text" id="name"><br>
-        <label for ="email">Email</label><br>
-        <input type="text" id="email"><br>
-        <label for ="Message">Message</label><br>
-        <input type="text" id="Message"><br>
+            <input type="text" id="name"><br>
+                <label for ="email">Email</label><br>
+                <input type="text" id="email"><br>
+            <label for ="Message">Message</label><br>
+            <input type="text" id="Message"><br>
         <button id="send">Send</button>
         
-</form>
-<br>
-<footer>
- <span>
-    <a href="#" target="_blank" class="fa fa-linkedin"></a>
-    <a href="#" target="_blank" class="fa fa-facebook"></a>
-    <a href="#" target="_blank" class="fa fa-instagram"></a>
- </span>
-</footer>
+        </form>
+            <br>
+            <footer>
+             <span>
+                <a href="#" target="_blank" class="fa fa-linkedin"></a>
+                <a href="#" target="_blank" class="fa fa-facebook"></a>
+                <a href="#" target="_blank" class="fa fa-instagram"></a>
+                </span>
+            </footer>
+            </section>
 
 </body>
 </html>
